feat: enhance pipeline watch functionality with improved resource management and logging